--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
               <img src="images/delivery-man.png" alt="" />
             </div>
             <div class="detail-box">
-              <h5>נהג פרטי</h5>
-              <p>הזמנת נהג קבוע מראש לנסיעות מתוכננות</p>
+              <h2>נהג פרטי</h2>
+              <h5>הזמנת נהג קבוע מראש לנסיעות מתוכננות</h5>
             </div>
           </div>
           <div class="box">
@@ -143,8 +143,8 @@
               <img src="images/airplane.png" alt="" />
             </div>
             <div class="detail-box">
-              <h5>נסיעות לנמל התעופה</h5>
-              <p>רכבים גדולים ונוחים המותאמים לכל כמות וסוג של כבודה</p>
+              <h2>נסיעות לנמל התעופה</h2>
+              <h5>רכבים גדולים ונוחים המותאמים לכל כמות וסוג של כבודה</h5>
             </div>
           </div>
           <div class="box">
@@ -152,8 +152,8 @@
               <img src="images/dilivery icon.png" alt="" />
             </div>
             <div class="detail-box">
-              <h5>משלוחים</h5>
-              <p>משלוחים מהירים לכל חלקי הארץ או לפי זמני לקוח</p>
+              <h2>משלוחים</h2>
+              <h5>משלוחים מהירים לכל חלקי הארץ או לפי זמני לקוח</h5>
             </div>
           </div>
         </div>
@@ -167,19 +167,17 @@
         <div class="row">
           <div class="col-md-6">
             <div class="detail-box">
-              <h2 class="d-flex justify-content-center">
-                הוסף אותנו לאנשי הקשר שלך
-              </h2>
+              <h2 class="text-center">הוסף אותנו לאנשי הקשר שלך</h2>
               <div class="text-box">
-                <p class="d-flex justify-content-center">
+                <h4 class="text-center">
                   שמירה מהירה של פרטי יצירת קשר שלנו ישירות למכשיר הנייד שלכם
                   בלחיצה אחת
-                </p>
+                </h4>
               </div>
 
               <div class="btn-box d-flex justify-content-center">
                 <a href="files/תחנת מוניות יבנה.vcf" download>
-                  <img src="images/save-btn.png" style="width: 200px" alt="" />
+                  <img src="images/save-btn.png" style="width: 250px" alt="" />
                 </a>
               </div>
             </div>
@@ -201,26 +199,35 @@
       <div class="container">
         <div class="">
           <div class="info_social">
-            <div>
-              <a href="https://www.facebook.com/taxiyavne">
-                <img src="images/fc.png" alt="facebook" />
-              </a>
+            <div class="row container">
+              <div class="col-lg-4">
+                <a href="tel:058-5885880">
+                  <img
+                    src="images/dial.png"
+                    style="width: 100%; margin-bottom: -10px"
+                    alt="dial"
+                  />
+                </a>
+              </div>
+              <div class="col-lg-4">
+                <a href="https://www.facebook.com/taxiyavne">
+                  <img
+                    src="images/facebook.png"
+                    style="width: 100%"
+                    alt="facebook"
+                  />
+                </a>
+              </div>
+              <div class="col-lg-4">
+                <a href="https://wa.me/0585885880">
+                  <img
+                    src="images/whatsapp2.png"
+                    style="width: 100%"
+                    alt="whatsapp"
+                  />
+                </a>
+              </div>
             </div>
-            <div>
-              <a href="https://wa.me/0585885880">
-                <img src="images/whatsapp.png" alt="whatsapp" />
-              </a>
-            </div>
-            <div>
-              <a href="tel:058-5885880">
-                <img src="images/call.png" alt="" />
-              </a>
-            </div>
-            <!-- <div>
-              <a href="">
-                <img src="images/instagram.png" alt="" />
-              </a>
-            </div> -->
           </div>
         </div>
       </div>
