--- a/index.html
+++ b/index.html
@@ -202,18 +202,14 @@
             <div class="row container">
               <div class="col-lg-4">
                 <a href="tel:058-5885880">
-                  <img
-                    src="images/dial.png"
-                    style="width: 100%; margin-bottom: -10px"
-                    alt="dial"
-                  />
+                  <img src="images/dial.png" style="width: 80%" alt="dial" />
                 </a>
               </div>
               <div class="col-lg-4">
                 <a href="https://www.facebook.com/taxiyavne">
                   <img
                     src="images/facebook.png"
-                    style="width: 100%"
+                    style="width: 80%"
                     alt="facebook"
                   />
                 </a>
@@ -222,7 +218,7 @@
                 <a href="https://wa.me/0585885880">
                   <img
                     src="images/whatsapp2.png"
-                    style="width: 100%"
+                    style="width: 80%"
                     alt="whatsapp"
                   />
                 </a>
