--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
               <div class="box">
                 <div class="detail-box">
                   <h1 class="d-flex justify-content-center">מוניות יבנה</h1>
+                  <h2 class="d-flex justify-content-center">058-588-5880</h2>
                 </div>
                 <div
                   id="carouselExampleIndicators"
@@ -128,7 +129,7 @@
         <div class="service_container">
           <div class="box">
             <div class="img-box">
-              <img src="images/delivery-man.png" alt="" />
+              <img src="images/delivery-man.png" style="width: 80px" alt="" />
             </div>
             <div class="detail-box">
               <h2>נהג פרטי</h2>
@@ -137,7 +138,7 @@
           </div>
           <div class="box">
             <div class="img-box">
-              <img src="images/airplane.png" alt="" />
+              <img src="images/airplane.png" style="width: 80px" alt="" />
             </div>
             <div class="detail-box">
               <h2>נסיעות לנמל התעופה</h2>
@@ -146,7 +147,7 @@
           </div>
           <div class="box">
             <div class="img-box">
-              <img src="images/dilivery icon.png" alt="" />
+              <img src="images/dilivery icon.png" style="width: 120px" alt="" />
             </div>
             <div class="detail-box">
               <h2>משלוחים</h2>
@@ -194,7 +195,7 @@
 
     <section class="info_section">
       <div class="container">
-        <div class="">
+        <div class="d-flex justify-content-center">
           <div class="info_social">
             <div class="row container">
               <div class="col-lg-4">
@@ -232,8 +233,10 @@
     <section class="container-fluid footer_section">
       <div class="container">
         <p>
-          &copy; כל הזכויות שמורות 2023
-          <span><b>גל עמר</b></span>
+          &copy; כל הזכויות שמורות 2023 -
+          <span
+            ><b><a href="mailto:gal9amar@gmail.com">גל עמר</a></b></span
+          >
         </p>
       </div>
     </section>
