--- a/index.html
+++ b/index.html
@@ -15,13 +15,7 @@
     <meta name="author" content="" />
 
     <title>מוניות יבנה</title>
-
-    <!-- slider stylesheet -->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
-    />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
 
     <!-- bootstrap core css -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -124,10 +118,12 @@
     <section class="service_section layout_padding">
       <div class="container">
         <div class="heading_container d-flex justify-content-center">
-          <h2>השירותים שלנו</h2>
+          <h2 class="w3-container w3-center w3-animate-bottom">
+            השירותים שלנו
+          </h2>
         </div>
         <div class="service_container">
-          <div class="box">
+          <div class="box w3-container w3-center w3-animate-bottom">
             <div class="img-box">
               <img src="images/delivery-man.png" style="width: 80px" alt="" />
             </div>
@@ -136,7 +132,7 @@
               <h5>הזמנת נהג קבוע מראש לנסיעות מתוכננות</h5>
             </div>
           </div>
-          <div class="box">
+          <div class="box w3-container w3-center w3-animate-left">
             <div class="img-box">
               <img src="images/airplane.png" style="width: 80px" alt="" />
             </div>
@@ -145,7 +141,7 @@
               <h5>רכבים גדולים ונוחים המותאמים לכל כמות וסוג של כבודה</h5>
             </div>
           </div>
-          <div class="box">
+          <div class="box w3-center w3-animate-right">
             <div class="img-box">
               <img src="images/dilivery icon.png" style="width: 120px" alt="" />
             </div>
@@ -160,7 +156,9 @@
 
     <!-- app section -->
 
-    <section class="app_section layout_padding2">
+    <section
+      class="app_section layout_padding2 w3-container w3-center w3-animate-zoom"
+    >
       <div class="container">
         <div class="row">
           <div class="col-md-6">
