--- a/index.html
+++ b/index.html
@@ -1,107 +1,99 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <!-- Basic -->
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <!-- Mobile Metas -->
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <!-- Site Metas -->
-    <meta name="keywords" content="" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
 
-    <title>מוניות יבנה</title>
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+<head>
+  <!-- Basic -->
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <!-- Mobile Metas -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <!-- Site Metas -->
+  <meta name="keywords" content="" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
 
-    <!-- bootstrap core css -->
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  <title>מוניות יבנה</title>
+  <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" /> -->
 
-    <!-- fonts style -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap"
-      rel="stylesheet"
-    />
+  <!-- bootstrap core css -->
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
-    <!-- Custom styles for this template -->
-    <link href="css/style.css" rel="stylesheet" />
-    <!-- responsive style -->
-    <link href="css/responsive.css" rel="stylesheet" />
-  </head>
+  <!-- fonts style -->
+  <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet" />
 
-  <body>
-    <div class="hero_area">
-      <!-- header section strats -->
-      <header class="header_section">
-        <div class="container-fluid"></div>
-      </header>
-      <!-- end header section -->
-      <!-- slider section -->
-      <section class="slider_section">
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-md-10">
-              <div class="box">
-                <div class="detail-box">
-                  <h1 class="d-flex justify-content-center">מוניות יבנה</h1>
-                  <h2 class="d-flex justify-content-center">058-588-5880</h2>
+  <!-- Custom styles for this template -->
+  <link href="css/style.css" rel="stylesheet" />
+  <script src="/js/index.js"></script>
+  <!-- responsive style -->
+  <link href="css/responsive.css" rel="stylesheet" />
+</head>
+
+<body>
+  <div class="hero_area">
+    <!-- header section strats -->
+    <header class="header_section">
+      <div class="container-fluid"></div>
+    </header>
+    <!-- end header section -->
+    <!-- slider section -->
+    <section class="slider_section">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-10">
+            <div class="box">
+              <div class="detail-box">
+                <div class="containertaxi">
+                  <svg viewBox="0 0 960 300">
+                    <symbol id="s-text">
+                      <text text-anchor="middle" x="50%" y="80%">
+                        מוניות יבנה
+                      </text>
+                    </symbol>
+                    <g class="g-ants">
+                      <use xlink:href="#s-text" class="text-copy"></use>
+                      <use xlink:href="#s-text" class="text-copy"></use>
+                      <use xlink:href="#s-text" class="text-copy"></use>
+                      <use xlink:href="#s-text" class="text-copy"></use>
+                      <use xlink:href="#s-text" class="text-copy"></use>
+                      <use xlink:href="#s-text" class="text-copy"></use>
+                    </g>
+                  </svg>
                 </div>
-                <div
-                  id="carouselExampleIndicators"
-                  class="carousel slide"
-                  data-ride="carousel"
-                >
-                  <ol class="carousel-indicators">
-                    <li
-                      data-target="#carouselExampleIndicators"
-                      data-slide-to="0"
-                      class="active"
-                    ></li>
-                    <li
-                      data-target="#carouselExampleIndicators"
-                      data-slide-to="1"
-                    ></li>
-                    <li
-                      data-target="#carouselExampleIndicators"
-                      data-slide-to="2"
-                    ></li>
-                    <li
-                      data-target="#carouselExampleIndicators"
-                      data-slide-to="3"
-                    ></li>
-                    <li
-                      data-target="#carouselExampleIndicators"
-                      data-slide-to="4"
-                    ></li>
-                  </ol>
-                  <div class="carousel-inner">
-                    <div class="carousel-item active">
-                      <div class="img-box">
-                        <img src="images/c5.png" alt="" />
-                      </div>
+
+                <h2 class="d-flex justify-content-center">058-588-5880</h2>
+              </div>
+              <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <div class="img-box">
+                      <img src="images/c5.png" alt="" />
                     </div>
-                    <div class="carousel-item">
-                      <div class="img-box">
-                        <img src="images/c5.png" alt="" />
-                      </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="img-box">
+                      <img src="images/c5.png" alt="" />
                     </div>
-                    <div class="carousel-item">
-                      <div class="img-box">
-                        <img src="images/c5.png" alt="" />
-                      </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="img-box">
+                      <img src="images/c5.png" alt="" />
                     </div>
-                    <div class="carousel-item">
-                      <div class="img-box">
-                        <img src="images/c5.png" alt="" />
-                      </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="img-box">
+                      <img src="images/c5.png" alt="" />
                     </div>
-                    <div class="carousel-item">
-                      <div class="img-box">
-                        <img src="images/c5.png" alt="" />
-                      </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="img-box">
+                      <img src="images/c5.png" alt="" />
                     </div>
                   </div>
                 </div>
@@ -109,165 +101,146 @@
             </div>
           </div>
         </div>
-      </section>
-      <!-- end slider section -->
+      </div>
+    </section>
+    <!-- end slider section -->
+  </div>
+
+  <!-- service section -->
+
+  <section class="service_section layout_padding">
+    <div class="container">
+      <div class="heading_container d-flex justify-content-center">
+        <h2 class="animate-charcter">השירותים שלנו</h2>
+      </div>
+      <div class="service_container">
+        <div class="box">
+          <div class="img-box">
+            <img src="images/delivery-man.png" style="width: 80px" alt="" />
+          </div>
+          <div class="detail-box">
+            <h2 c>נהג פרטי</h2>
+            <h5>הזמנת נהג קבוע מראש לנסיעות מתוכננות</h5>
+          </div>
+        </div>
+        <div class="box">
+          <div class="img-box">
+            <img src="images/airplane.png" style="width: 80px" alt="" />
+          </div>
+          <div class="detail-box">
+            <h2>נסיעות לנמל התעופה</h2>
+            <h5>רכבים גדולים ונוחים המותאמים לכל כמות וסוג של כבודה</h5>
+          </div>
+        </div>
+        <div class="box w3-center w3-animate-right">
+          <div class="img-box">
+            <img src="images/dilivery icon.png" style="width: 120px" alt="" />
+          </div>
+          <div class="detail-box">
+            <h2>משלוחים</h2>
+            <h5>משלוחים מהירים לכל חלקי הארץ או לפי זמני לקוח</h5>
+          </div>
+        </div>
+      </div>
     </div>
+  </section>
 
-    <!-- service section -->
+  <!-- app section -->
 
-    <section class="service_section layout_padding">
-      <div class="container">
-        <div class="heading_container d-flex justify-content-center">
-          <h2 class="w3-container w3-center w3-animate-bottom">
-            השירותים שלנו
-          </h2>
+  <section class="app_section layout_padding2">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="detail-box">
+            <div>
+              <svg viewbox="0 0 100 20">
+                <defs>
+                  <linearGradient id="gradient">
+                    <stop color="#000" />
+                  </linearGradient>
+                  <pattern id="wave" x="0" y="-0.5" width="100%" height="100%" patternUnits="userSpaceOnUse">
+                    <path id="wavePath" d="M-40 9 Q-30 7 -20 9 T0 9 T20 9 T40 9 T60 9 T80 9 T100 9 T120 9 V20 H-40z" mask="url(#mask)" fill="url(#gradient)">
+                      <animateTransform attributeName="transform" begin="0s" dur="1.5s" type="translate" from="0,0" to="40,0" repeatCount="indefinite" />
+                    </path>
+                  </pattern>
+                </defs>
+                <text text-anchor="middle" x="50" y="11" font-size="9" fill="white" fill-opacity="1">
+                  הוסף אותנו לאנשי הקשר שלך
+                </text>
+                <text text-anchor="middle" x="50" y="11" font-size="9" fill="url(#wave)" fill-opacity="1">
+                  הוסף אותנו לאנשי הקשר שלך
+                </text>
+              </svg>
+              <h2 class="text-center"></h2>
+            </div>
+            <div class="text-box">
+              <h4 class="text-center">
+                שמירה מהירה של פרטי יצירת קשר שלנו ישירות למכשיר הנייד שלכם
+                בלחיצה אחת
+              </h4>
+            </div>
+
+            <div class="btn-box d-flex justify-content-center">
+              <a href="files/תחנת מוניות יבנה.vcf" download>
+                <img src="images/save-btn.png" style="width: 250px" alt="" />
+              </a>
+            </div>
+          </div>
         </div>
-        <div class="service_container">
-          <div class="box w3-container w3-center w3-animate-bottom">
-            <div class="img-box">
-              <img src="images/delivery-man.png" style="width: 80px" alt="" />
-            </div>
-            <div class="detail-box">
-              <h2>נהג פרטי</h2>
-              <h5>הזמנת נהג קבוע מראש לנסיעות מתוכננות</h5>
-            </div>
-          </div>
-          <div class="box w3-container w3-center w3-animate-left">
-            <div class="img-box">
-              <img src="images/airplane.png" style="width: 80px" alt="" />
-            </div>
-            <div class="detail-box">
-              <h2>נסיעות לנמל התעופה</h2>
-              <h5>רכבים גדולים ונוחים המותאמים לכל כמות וסוג של כבודה</h5>
-            </div>
-          </div>
-          <div class="box w3-center w3-animate-right">
-            <div class="img-box">
-              <img src="images/dilivery icon.png" style="width: 120px" alt="" />
-            </div>
-            <div class="detail-box">
-              <h2>משלוחים</h2>
-              <h5>משלוחים מהירים לכל חלקי הארץ או לפי זמני לקוח</h5>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- app section -->
-
-    <section
-      class="app_section layout_padding2 w3-container w3-center w3-animate-zoom"
-    >
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <div class="detail-box">
-              <h2 class="text-center">הוסף אותנו לאנשי הקשר שלך</h2>
-              <div class="text-box">
-                <h4 class="text-center">
-                  שמירה מהירה של פרטי יצירת קשר שלנו ישירות למכשיר הנייד שלכם
-                  בלחיצה אחת
-                </h4>
-              </div>
-
-              <div class="btn-box d-flex justify-content-center">
-                <a href="files/תחנת מוניות יבנה.vcf" download>
-                  <img src="images/save-btn.png" style="width: 250px" alt="" />
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="img-box">
-              <img src="images/save-as-contact.png" style="width: 75%" alt="" />
-            </div>
+        <div class="col-md-6">
+          <div class="img-box">
+            <img src="images/save-as-contact.png" style="width: 75%" alt="" />
           </div>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <!-- end app section -->
+  <!-- end app section -->
 
-    <!-- info section -->
+  <!-- info section -->
 
-    <section class="info_section">
-      <div class="container">
-        <div class="d-flex justify-content-center">
-          <div class="info_social">
-            <div class="row container">
-              <div class="col-lg-4">
-                <a href="tel:058-5885880">
-                  <img src="images/dial.png" style="width: 100%" alt="dial" />
-                </a>
-              </div>
-              <div class="col-lg-4">
-                <a href="https://www.facebook.com/taxiyavne">
-                  <img
-                    src="images/facebook.png"
-                    style="width: 100%"
-                    alt="facebook"
-                  />
-                </a>
-              </div>
-              <div class="col-lg-4">
-                <a href="https://wa.me/0585885880">
-                  <img
-                    src="images/whatsapp2.png"
-                    style="width: 100%"
-                    alt="whatsapp"
-                  />
-                </a>
-              </div>
+  <section class="info_section">
+    <div class="container">
+      <div class="d-flex justify-content-center">
+        <div class="info_social">
+          <div class="row container">
+            <div class="col-lg-4">
+              <a href="tel:058-5885880">
+                <img src="images/dial.png" style="width: 100%" alt="dial" />
+              </a>
+            </div>
+            <div class="col-lg-4">
+              <a href="https://www.facebook.com/taxiyavne">
+                <img src="images/facebook.png" style="width: 100%" alt="facebook" />
+              </a>
+            </div>
+            <div class="col-lg-4">
+              <a href="https://wa.me/0585885880">
+                <img src="images/whatsapp2.png" style="width: 100%" alt="whatsapp" />
+              </a>
             </div>
           </div>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <!-- end info section -->
+  <!-- end info section -->
 
-    <!-- footer section -->
-    <section class="container-fluid footer_section">
-      <div class="container">
-        <p>
-          &copy; כל הזכויות שמורות 2023 -
-          <span
-            ><b><a href="mailto:gal9amar@gmail.com">גל עמר</a></b></span
-          >
-        </p>
-      </div>
-    </section>
-    <!-- footer section -->
+  <!-- footer section -->
+  <section class="container-fluid footer_section">
+    <div class="container">
+      <p>
+        &copy; כל הזכויות שמורות 2023 -
+        <span><b><a href="mailto:gal9amar@gmail.com">גל עמר</a></b></span>
+      </p>
+    </div>
+  </section>
+  <!-- footer section -->
 
-    <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.js"></script>
-    <script
-      type="text/javascript"
-      src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
-    ></script>
+  <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
+  <script type="text/javascript" src="js/bootstrap.js"></script>
+</body>
 
-    <!-- owl carousel script -->
-    <!-- <script type="text/javascript">
-      $(".owl-carousel").owlCarousel({
-        loop: true,
-        margin: 20,
-        navText: [],
-        autoplay: true,
-        autoplayHoverPause: true,
-        responsive: {
-          0: {
-            items: 1,
-          },
-          768: {
-            items: 2,
-          },
-          1000: {
-            items: 2,
-          },
-        },
-      });
-    </script> -->
-    <!-- end owl carousel script -->
-  </body>
 </html>
