--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <section class="slider_section">
         <div class="container-fluid">
           <div class="row">
-            <div class="col-md-10">
+            <div class="col-sm-12 col-md-12 col-lg-12">
               <div class="box">
                 <div class="detail-box">
                   <div class="containertaxi">
@@ -64,8 +64,12 @@
                       </g>
                     </svg>
                   </div>
-
-                  <h2 class="d-flex justify-content-center">058-588-5880</h2>
+                  <h2
+                    class="d-flex justify-content-center"
+                    style="font-size: 7vw"
+                  >
+                    058-588-5880
+                  </h2>
                 </div>
                 <div
                   id="carouselExampleIndicators"
