--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                   class="carousel slide"
                   data-ride="carousel"
                 >
-                  <ol class="carousel-indicators">
+                  <!-- <ol class="carousel-indicators">
                     <li
                       data-target="#carouselExampleIndicators"
                       data-slide-to="0"
@@ -98,7 +98,7 @@
                       data-target="#carouselExampleIndicators"
                       data-slide-to="4"
                     ></li>
-                  </ol>
+                  </ol> -->
                   <div class="carousel-inner">
                     <div class="carousel-item active">
                       <div class="img-box">
@@ -137,7 +137,7 @@
 
     <!-- service section -->
 
-    <section class="service_section layout_padding">
+    <section class="service_section layout_padding watertower">
       <div class="container">
         <div class="heading_container d-flex justify-content-center">
           <h2 class="animate-charcter">השירותים שלנו</h2>
