--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <div class="service_container">
           <div class="box">
             <div class="img-box">
-              <img src="images/delivery-man.png" style="width: 80px" alt="" />
+              <img src="images/taxivip.png" alt="" />
             </div>
             <div class="detail-box">
               <h2 c>נהג פרטי</h2>
@@ -154,20 +154,20 @@
           </div>
           <div class="box">
             <div class="img-box">
-              <img src="images/airplane.png" style="width: 80px" alt="" />
+              <img src="images/taxibages.png" alt="" />
             </div>
             <div class="detail-box">
               <h2>נסיעות לנמל התעופה</h2>
-              <h5>רכבים גדולים ונוחים המותאמים לכל כמות וסוג של כבודה</h5>
+              <h5>רכבים גדולים ונוחים המותאמים לכל כמות של כבודה</h5>
             </div>
           </div>
-          <div class="box w3-center w3-animate-right">
+          <div class="box">
             <div class="img-box">
-              <img src="images/dilivery icon.png" style="width: 120px" alt="" />
+              <img src="images/taxideliver.png" alt="" />
             </div>
             <div class="detail-box">
               <h2>משלוחים</h2>
-              <h5>משלוחים מהירים לכל חלקי הארץ או לפי זמני לקוח</h5>
+              <h5>משלוחים מידיים לכל חלקי הארץ ומשלוחים עתידיים</h5>
             </div>
           </div>
         </div>
