--- a/index.html
+++ b/index.html
@@ -102,27 +102,27 @@
                   <div class="carousel-inner">
                     <div class="carousel-item active">
                       <div class="img-box">
-                        <img src="images/c5.png" alt="" />
+                        <img src="images/taxi1.png" alt="" />
                       </div>
                     </div>
                     <div class="carousel-item">
                       <div class="img-box">
-                        <img src="images/c5.png" alt="" />
+                        <img src="images/taxi1.png" alt="" />
                       </div>
                     </div>
                     <div class="carousel-item">
                       <div class="img-box">
-                        <img src="images/c5.png" alt="" />
+                        <img src="images/taxi1.png" alt="" />
                       </div>
                     </div>
                     <div class="carousel-item">
                       <div class="img-box">
-                        <img src="images/c5.png" alt="" />
+                        <img src="images/taxi1.png" alt="" />
                       </div>
                     </div>
                     <div class="carousel-item">
                       <div class="img-box">
-                        <img src="images/c5.png" alt="" />
+                        <img src="images/taxi1.png" alt="" />
                       </div>
                     </div>
                   </div>
@@ -312,26 +312,56 @@
             <div class="row container">
               <div class="col-lg-4">
                 <a href="tel:058-5885880">
+                  <div class="wrapper">
+                    <div class="ring">
+                      <div
+                        class="coccoc-alo-phone coccoc-alo-green coccoc-alo-show"
+                      >
+                        <div class="coccoc-alo-ph-circle"></div>
+                        <div class="coccoc-alo-ph-circle-fill"></div>
+                        <div class="coccoc-alo-ph-img-circle"></div>
+                      </div>
+                    </div></div
+                ></a>
+                <!-- <a href="tel:058-5885880">
                   <img src="images/dial.png" style="width: 100%" alt="dial" />
-                </a>
+                </a> -->
               </div>
               <div class="col-lg-4">
-                <a href="https://www.facebook.com/taxiyavne">
+                <!-- <a href="https://www.facebook.com/taxiyavne">
                   <img
                     src="images/facebook.png"
                     style="width: 100%"
                     alt="facebook"
                   />
-                </a>
+                </a> -->
               </div>
               <div class="col-lg-4">
-                <a href="https://wa.me/0585885880">
+                <!-- <a href="https://wa.me/0585885880">
                   <img
                     src="images/whatsapp2.png"
                     style="width: 100%"
                     alt="whatsapp"
                   />
-                </a>
+                </a> -->
+                <!-- wpp-btn-mobile -->
+                <div
+                  class="phone-call cbh-phone cbh-green cbh-show cbh-static"
+                  id="clbh_phone_div"
+                >
+                  <a
+                    id="WhatsApp-button"
+                    href="https://wa.me/0585885880"
+                    target="_blank"
+                    class="phoneJs"
+                    title="WhatsApp"
+                  >
+                    <div class="cbh-ph-circle"></div>
+                    <div class="cbh-ph-circle-fill"></div>
+                    <div class="cbh-ph-img-circle1"></div>
+                  </a>
+                </div>
+                <!-- wpp-btn-mobile -->
               </div>
             </div>
           </div>
