--- a/index.html
+++ b/index.html
@@ -306,40 +306,42 @@
     <!-- info section -->
 
     <section class="info_section">
-      <div>
-        <div class="callicon">
-          <a href="tel:058-5885880">
-            <div class="wrapper">
-              <div class="ring">
-                <div class="coccoc-alo-phone coccoc-alo-green coccoc-alo-show">
-                  <div class="coccoc-alo-ph-circle"></div>
-                  <div class="coccoc-alo-ph-circle-fill"></div>
-                  <div class="coccoc-alo-ph-img-circle"></div>
+                      <div>
+                  <div class="callicon">
+                    <a href="tel:058-5885880">
+                      <div class="wrapper">
+                        <div class="ring">
+                          <div
+                            class="coccoc-alo-phone coccoc-alo-green coccoc-alo-show"
+                          >
+                            <div class="coccoc-alo-ph-circle"></div>
+                            <div class="coccoc-alo-ph-circle-fill"></div>
+                            <div class="coccoc-alo-ph-img-circle"></div>
+                          </div>
+                        </div></div
+                    ></a>
+                  </div>
+                  <div class="whatsappicon">
+                    <!-- wpp-btn-mobile -->
+                    <div
+                      class="phone-call cbh-phone cbh-green cbh-show cbh-static"
+                      id="clbh_phone_div"
+                    >
+                      <a
+                        id="WhatsApp-button"
+                        href="https://wa.me/0585885880"
+                        target="_blank"
+                        class="phoneJs"
+                        title="WhatsApp"
+                      >
+                        <div class="cbh-ph-circle"></div>
+                        <div class="cbh-ph-circle-fill"></div>
+                        <div class="cbh-ph-img-circle1"></div>
+                      </a>
+                    </div>
+                    <!-- wpp-btn-mobile -->
+                  </div>
                 </div>
-              </div></div
-          ></a>
-        </div>
-        <div class="whatsappicon">
-          <!-- wpp-btn-mobile -->
-          <div
-            class="phone-call cbh-phone cbh-green cbh-show cbh-static"
-            id="clbh_phone_div"
-          >
-            <a
-              id="WhatsApp-button"
-              href="https://wa.me/0585885880"
-              target="_blank"
-              class="phoneJs"
-              title="WhatsApp"
-            >
-              <div class="cbh-ph-circle"></div>
-              <div class="cbh-ph-circle-fill"></div>
-              <div class="cbh-ph-img-circle1"></div>
-            </a>
-          </div>
-          <!-- wpp-btn-mobile -->
-        </div>
-      </div>
       <!-- <div class="container">
         <div class="d-flex justify-content-center">
           <div class="info_social">
