--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <!-- favicon -->
-     <link rel="icon" href="/images/favicon/logo1.png" type="image/png" />
+    <link rel="icon" href="/images/favicon/logo1.png" type="image/png" />
     <!-- Basic -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -383,7 +383,13 @@
         <p>
           &copy; כל הזכויות שמורות 2023 -
           <span
-            ><b><a href="mailto:gal9amar@gmail.com">גל עמר</a></b></span
+            ><b
+              ><a
+                style="text-decoration: underline"
+                href="mailto:gal9amar@gmail.com"
+                >גל עמר</a
+              ></b
+            ></span
           >
         </p>
       </div>
