--- a/index.html
+++ b/index.html
@@ -289,7 +289,11 @@
 
               <div class="btn-box d-flex justify-content-center">
                 <a class="" href="files/תחנת מוניות יבנה.vcf" download>
-                  <img src="images/save-btn.png" style="width: 250px" alt="" />
+                  <img
+                    src="images/saveConract.png"
+                    style="width: 200px"
+                    alt=""
+                  />
                 </a>
               </div>
             </div>
